<resources>
    <string name="app_name">SaludNFC</string>
    <string name="created_field">Fecha de registro</string>

    <!-- PATIENTS -->
    <!-- FIELDS -->
    <string name="patient_create">Crear paciente</string>
    <string name="ci_field">Cédula de identidad</string>
    <string name="ciemision_field">Emisión</string>
    <string name="name_field">Nombres</string>
    <string name="lastname_field">Apellidos</string>
    <string name="gender_field">Sexo</string>
    <string name="birthday_field">Fecha de nacimiento</string>
    <string name="birthplace_field">Lugar de nacimiento</string>
    <string name="instruction_field">Grado de instrucción</string>
    <string name="civilstatus_field">Estado civil</string>
    <string name="occupation_field">Ocupación</string>
    <string name="bloodtype_field">Tipo de sangre</string>

    <!-- Departamentos ABBR -->
    <string name="bn_abbr">BN</string>
    <string name="ch_abbr">CH</string>
    <string name="cb_abbr">CB</string>
    <string name="lp_abbr">LP</string>
    <string name="or_abbr">OR</string>
    <string name="pa_abbr">PA</string>
    <string name="pt_abbr">PT</string>
    <string name="sc_abbr">SC</string>
    <string name="tj_abbr">TJ</string>

    <!-- Departamentos -->
    <string name="bn">Beni</string>
    <string name="ch">Chuquisaca</string>
    <string name="cb">Cochabamba</string>
    <string name="lp">La Paz</string>
    <string name="or">Oruro</string>
    <string name="pa">Pando</string>
    <string name="pt">Potosi</string>
    <string name="sc">Santa Cruz</string>
    <string name="tj">Tarija</string>

    <!-- Sexo -->
    <string name="male">Masculino</string>
    <string name="female">Femenino</string>

    <!-- Tipo de sangre -->
    <string name="a_pos">A RH+</string>
    <string name="a_neg">A RH-</string>
    <string name="b_pos">B RH+</string>
    <string name="b_neg">B RH-</string>
    <string name="o_pos">O RH+</string>
    <string name="o_neg">O RH-</string>
    <string name="ab_pos">AB RH+</string>
    <string name="ab_neg">AB RH-</string>

    <!-- HISTORIES -->
    <!-- Fields -->
    <string name="history_create">Crear antecedente</string>
    <string name="history_type_field">Tipo de antecedente</string>
    <string name="nul">--- Escoja un tipo de antecedente ---</string>
    <string name="fam">Antecedente Familiar</string>
    <string name="per">Antecedente Personal</string>
    <string name="med">Antecedente Medicamentos</string>

    <string name="grade_field">Grado de parentesco</string>
    <string name="illness_field">Enfermedad</string>

    <string name="personal_type_field">--- Escoja un tipo de antecedente personal ---</string>
    <string name="personal_type">Tipo de antecedente personal</string>
    <string name="description_field">Descripción</string>

    <string name="med_field">Nombre del medicamento</string>
    <string name="via_field">Vía de administración</string>
    <string name="dateini_field">Fecha de inicio</string>

    <!-- Tipo personal -->
    <string name="aler">Alergia</string>
    <string name="enfe">Enfermedad</string>
    <string name="ciru">Cirugia</string>

    <!-- Tipo de vía de administración -->
    <string name="oral">Oral</string>
    <string name="subl">Sublingual</string>
    <string name="pare">Parenteral</string>
    <string name="rect">Rectal</string>
    <string name="topi">Topica</string>
    <string name="perc">Percutanea</string>

    <!-- CONTROLS -->
    <!-- Fields-->
    <string name="control_create">Crear control</string>
    <string name="control_type_field">Tipo de Control</string>
    <string name="vaccine_field">Vacuna</string>
    <string name="viav_field">Via de administración</string>
    <string name="dosis_field">Numero de dosis</string>

    <string name="weight_field">Peso (Kg)</string>
    <string name="height_field">Altura (cm)</string>

    <string name="temperature_field">Temperatura (°C)</string>
    <string name="heartrate_field">Frecuencia cardíaca</string>
    <string name="systole_field">Sistole</string>
    <string name="diastole_field">Diastole</string>
    <string name="separator">/</string>
    <string name="pre_arterial">Presion arterial</string>

    <string name="lastmenst_field">Fecha última menstruación</string>
    <string name="lastmamo_field">Fecha última mamografía</string>
    <string name="sexact_field">Vida sexual</string>
    <string name="lastpapa_field">Fecha último papanicolau</string>

    <string name="geritype_field">Tipo de Valoración Geriatrica</string>
    <string name="notes_field">Descripcion</string>

    <string name="nad">--- Escoja un tipo de control ---</string>
    <string name="vac">Control de Vacunacion</string>
    <string name="cre">Control de Crecimiento</string>
    <string name="tri">Control de Triaje</string>
    <string name="gin">Control Ginecologico</string>
    <string name="ger">Control Geriatrico</string>

    <string name="der">Intra-dermica</string>
    <string name="mus">Intra-muscular</string>
    <string name="ora">Oral</string>
    <string name="sub">Subcutanea</string>

    <string name="act">Activa</string>
    <string name="ina">Inactiva</string>

    <string name="vmed">Valoracion Medica</string>
    <string name="vfun">Valoracion Funcional</string>
    <string name="vcog">Valoracion Cognitiva</string>
    <string name="vsoc">Valoracion Social</string>

    <!-- CONSULTATION -->
    <string name="consultation_create">Crear consulta médica</string>
    <string name="consultation_title">Consultas Médicas</string>
    <string name="consultation_detail_title">Consulta Médica</string>
    <!-- Fields-->
    <string name="anamnesis">Anamnesis</string>
    <string name="physical">Examen físico</string>
    <string name="diagnosis">Diagnóstico</string>
    <string name="treatment">Tratamiento</string>
    <string name="justification">Justificación</string>


    <!-- Strings related to activity_login -->
    <string name="title_activity_login">Iniciar Sesión</string>
    <string name="prompt_email">Correo Electrónico</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!-- CONTACT -->
    <string name="contact_title">Contacto de emergencia</string>
    <string name="contact_name">Nombre</string>
    <string name="contact_lastname">Apellido</string>
    <string name="contact_relationship">Relación de parentesco</string>
    <string name="contact_phone">Telefono</string>

    <!-- NFC! -->
    <string name="nfc_title">Carnet NFC</string>
    <string name="nfc_question">¿Guardar datos del paciente?</string>
    <string name="nfc_patient">Paciente</string>
    <string name="nfc_patient_hc">Código de Historia Clínica</string>
    <string name="nfc_instructions">Acerque el nuevo carnet al dispositivo</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
</resources>
